<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.baidu.mapapi.map.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/map_view"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:hint="@string/hint_map_city"/>
        <AutoCompleteTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:hint="@string/hint_map_address"/>
        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/action_map_search"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/action_map_sure"/>
</FrameLayout>