<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_user_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_corners">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/ic_register_small_van"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_register_van"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="80dp"
                        android:layout_marginLeft="7dp"
                        android:background="@drawable/ic_register_small_truck"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="60dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/ic_register_truck"/>
                </LinearLayout>
                <RadioGroup
                    android:id="@+id/order_car_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/small_van_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_driver_small_van"/>
                    <RadioButton
                        android:id="@+id/van_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_driver_van"/>
                    <RadioButton
                        android:id="@+id/small_truck_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_driver_small_truck"/>
                    <RadioButton
                        android:id="@+id/truck_btn"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/prompt_driver_truck"/>
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_2"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_corners">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/di_line_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/order_select_departure"
                            android:layout_width="0dp"
                            android:layout_weight="9"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:hint="@string/hint_departure"
                            android:background="@color/colorTransparent"/>
                        <ImageButton
                            android:id="@+id/order_location_departure"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/btn_order_location"
                            android:background="@color/colorTransparent"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/order_select_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:hint="@string/hint_destination"
                        android:background="@color/colorTransparent"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_3"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_corners">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:hint="@string/hint_explain"/>
                <CheckBox
                    android:id="@+id/order_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompt_order_back" />
                <CheckBox
                    android:id="@+id/order_carry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/prompt_order_carry"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_4"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_corners">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/hint_follower_explain"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center"
                        android:text="@string/prompt_order_followers"/>
                    <Spinner
                        android:id="@+id/order_followers"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:entries="@array/order_followers">

                    </Spinner>
                </LinearLayout>
                <EditText
                    android:id="@+id/order_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_order_remarks"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/order_create_btn"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/Indigo_colorPrimary"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_order_create"/>
            <Button
                android:id="@+id/order_create_advanced_btn"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/red"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/action_order_create_advanced"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_user"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_user"
        app:menu="@menu/nav_menu_user"/>
</android.support.v4.widget.DrawerLayout>